fix: Table THead style (nowrap)

--- a/src/components/ui/table/table.module.scss
+++ b/src/components/ui/table/table.module.scss
@@ -7,6 +7,7 @@
 .thead {
   background-color: var(--color-dark-500);
   user-select: none;
+  white-space: nowrap;
 }
 
 .tbody {
